--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ networks:
     attachable: true
 
 volumes:
-  database_volume:
+  postgres_data:
 
 
 services:
   database:
-    image: postgres:14.3-alpine
+    image: postgres:14.4-alpine
     container_name: tms_database
     restart: always
     healthcheck:
@@ -30,8 +30,8 @@ services:
       DB_USER: ${DB_USER}
       DB_PASS: ${DB_PASS}
     volumes:
-      - database_volume:/var/lib/postgresql
-      - ./init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh:ro
+      - postgres_data:/var/lib/postgresql/data/
+      # - ./init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh:ro
     networks:
       tms-net:
         aliases:
